<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_add_denuncia"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_crear_denuncia" />

        <item
            android:id="@+id/nav_list_denuncias"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_mis_denuncias" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_acerca_de" />

    </group>

    <item android:title="Sesión">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/menu_cerrar_sesion" />
        </menu>
    </item>

</menu>